--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,6 @@ orbs:
   azure-cli: circleci/azure-cli@1.0.0
 version: 2.1
 workflows:
-  example-workflow:
+  login-workflow:
     jobs:
       - login-to-azure
