--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,20 @@
 jobs:
   login-to-azure:
-    working_directory: ~/repo
-    docker:
-      - image: circleci/node:10.16.3
     executor: azure-cli/azure-docker
     steps:
       - azure-cli/login-with-service-principal
       - run:
           command: az resource list
           name: List resources of tenant stored as `AZURE_SP_TENANT` env var
+  install-function-tools:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - checkout
       - run:
           name: Install Azure functions tools
           command: |
-            sudo apt install gnupg
             curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
             sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
             sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-$(lsb_release -cs)-prod $(lsb_release -cs) main" > /etc/apt/sources.list.d/dotnetdev.list'
@@ -29,3 +31,6 @@ workflows:
   login-workflow:
     jobs:
       - login-to-azure
+      - install-function-tools:
+          requires:
+            - login-to-azure
