--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Install Azure functions tools
-          command: npm i -g azure-functions-core-tools@3 --unsafe-perm true
+          command: sudo npm i -g azure-functions-core-tools@3 --unsafe-perm true
       - run:
           name: Run 'func'
           command: func
